--- a/Config/mongod.conf
+++ b/Config/mongod.conf
@@ -1,11 +1,11 @@
 # Where and how to store data.
 storage:
-  dbPath: "../Data/db"
+  dbPath: "Data/db"
 
 # Where to write logging data.
 systemLog:
   destination: file
-  path: "../Logs/mongod.log"
+  path: "Logs/mongod.log"
   logAppend: true
   
 # Network interfaces
